Fixed alignment header links

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
     gap: 20px;
     align-items: center;
     margin-left: auto;
-    padding-right: 15%;
+    padding-right: 13%;
 }
 a, .hero-left {
     text-decoration: none;
